feat: Enhance metadata validation and retention services
- Refactor MetadataValidationService to include schema version validation and improved error reporting.
- Introduce global minimum retention days and warning window days in RetentionService with tenant-specific overrides.
- Add DmsHealthIndicator for monitoring document and outbox event counts.
- Implement IndexDriftService to analyze and reconcile indexing discrepancies.
- Create ValidateRequirementReferencesRequest DTO for validating requirement references.
- Add unit tests for BlobStorageService and ChunkingService to ensure proper functionality.
- Update frontend components for document listing and search with improved UI and pagination.
- Introduce new shared components: DocumentCard, SearchBar, and Pagination for better code reuse.